<resources>
    <string name="app_name">CoinMarker</string>
    <string name="market_tab_title">마켓</string>
    <string name="archive_tab_title">즐겨찾기</string>
    <string name="search_hint">검색</string>
    <string name="warning_empty_archive">즐겨찾기에 등록된 가상자산이 없습니다.</string>
    <string name="warning_no_search_result">검색된 가상자산이 없습니다.</string>
    <string name="sorting_by_volume">거래대금</string>
    <string name="sorting_by_24_hours">24시간</string>
    <string name="sorting_by_last">현재가</string>
    <string name="sorting_by_asset_name">가상자산명</string>
</resources>