<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.coinmarker.coinmarker.presentation.MainViewModel" />
        <import type="com.coinmarker.coinmarker.presentation.util.type.SortingType"/>
        <import type="com.coinmarker.coinmarker.presentation.util.strategy.AssetSortingStrategy"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/W1">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guide_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guide_end" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border_search_et"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:singleLine="true"
            android:hint="@string/search_hint"
            android:textAppearance="@style/TextAppearance.D2"
            android:textColor="@color/G1"
            android:textColorHint="@color/G4"
            android:textCursorDrawable="@color/G3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            android:layout_marginTop="25dp"
            android:text="@={vm.searchWord}"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="15dp"
            app:tabIndicatorFullWidth="true"
            app:tabRippleColor="@null"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_market"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/market_tab_title"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_archive"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/archive_tab_title"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_sorting_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            android:background="@drawable/border_asset_sorting_bar"
            android:paddingVertical="15dp"
            android:layout_marginTop="15dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sorting_by_asset_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawablePadding="@dimen/sorting_drawable_padding"
                android:text="@string/sorting_by_asset_name"
                android:textAppearance="@style/TextAppearance.D2"
                android:drawableEnd="@drawable/ic_default_order"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sorting_by_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/tv_sorting_by_24_hours"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.D2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/sorting_by_last"
                android:drawablePadding="@dimen/sorting_drawable_padding"
                android:drawableEnd="@drawable/ic_default_order"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sorting_by_24_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.D2"
                app:layout_constraintEnd_toStartOf="@id/tv_sorting_by_volume"
                android:layout_marginEnd="15dp"
                android:text="@string/sorting_by_24_hours"
                android:drawablePadding="@dimen/sorting_drawable_padding"
                android:drawableEnd="@drawable/ic_default_order"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sorting_by_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/sorting_by_volume"
                android:textAppearance="@style/TextAppearance.D2"
                android:layout_marginEnd="15dp"
                android:drawablePadding="@dimen/sorting_drawable_padding"
                android:drawableEnd="@drawable/ic_default_order" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/const_sorting_bar"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>